# ATRILive

./: .gitignore  README.md
atri-core/: Cargo.toml  README.md
atri-core/core/: Cargo.toml  README.md
atri-core/core/src/: main.rs
atri-core/core/src/handlers/: canvas.rs  designer.rs  mod.rs  panel.rs
atri-core/core/src/utils/: event.rs  mod.rs  signal.rs
atri-core/ext-apis/: Cargo.toml  README.md
atri-core/ext-danmuku/: Cargo.toml  README.md
atri-core/ext-danmuku/src/: bili.rs  lib.rs
atri-core/ext-humantracking/: Cargo.toml  README.md
atri-core/ext-humantracking/mediapipe_native/: HolisticTrackingApi.h  TrackingDataStructure.h
atri-core/ext-multi/: Cargo.toml  README.md
atri-core/ext-rtmprelay/: Cargo.toml  README.md
atri-core/ext-server/: Cargo.toml  README.md
atri-core/ext-tobii/: Cargo.toml  README.md
atri-core/ext-trigger/: Cargo.toml  README.md
interaction/: README.md
interaction/designer/: index.html  package-lock.json  package.json
interaction/designer/src/: App.svelte
interaction/designer/src/lib/: Designer.svelte  Panel.svelte
interaction/designer/src/lib/components/: Appbar.svelte  Canvas.svelte  Components.svelte  Live2d.svelte  Properties.scss  Properties.svelte  Toolsets.svelte
interaction/panel/: package-lock.json  package.json
server-side/: Cargo.toml  README.md
server/atri/: Cargo.toml
server/mediapipe-backend/: landmarker.py  main.py  requirements.txt
server/protos/: ClientHandShake.proto  ClientHeartbeat.proto  InternalHandShake.proto  InternalHeartbeat.proto
(+11 files in other folders)
