[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
ext-danmuku = { path = "../ext-danmuku" }
poem = { version = "1.3.14", features = ["eyre06", "static-files"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"]}
tracing-subscriber = "0.3"
tracing = "0.1"

