[package]
name = "ext-danmuku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde_json = "1"
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"]}
tokio = { version = "1", features = ["time", "sync"] }
url = "2.1.0"
color-eyre = "0.6"
miniz_oxide = "0.5.1"
tracing-subscriber = "0.3"
tracing = "0.1"
regex = { version = "1.1.8", features = ["pattern"] }